force-app/main/default/objects/Mail__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the customer insured their mail?</description>
    <label>Insurance</label>
    <type>Checkbox</type>
</CustomField>