force-app/main/default/objects/Mail__c/fields/Insured_Value__c.field-meta.xml
<CustomField>
    <fullName>Insured_Value__c</fullName>
    <inlineHelpText>Please enter the amount insured for to the nearest whole dollar.</inlineHelpText>
    <label>Insured Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>