force-app/main/default/objects/Mail__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <inlineHelpText>Please enter width in inches</inlineHelpText>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>