force-app/main/default/objects/Mail__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <formula>Inhabitant__r.Contact__r.FirstName + &quot; &quot; +  Inhabitant__r.Contact__r.LastName + BR() + Inhabitant__r.Address__r.Mailing_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient</label>
    <type>Text</type>
</CustomField>