force-app/main/default/objects/Mail__c/fields/Submit_For_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Submit_For_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to start the insurance claim approval process</description>
    <label>Submit For Insurance</label>
    <type>Checkbox</type>
</CustomField>