force-app/main/default/objects/Mail__c/recordTypes/Master1.recordType-meta.xml
<RecordType>
    <fullName>Master1</fullName>
    <active>true</active>
    <label>Master1</label>
</RecordType>