force-app/main/default/objects/Mail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Recipient__c</columns>
    <columns>Delivery_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Mail__c.Master1</value>
    </filters>
    <label>All</label>
</ListView>