force-app/main/default/objects/Mail__c/listViews/Missing_Mail.listView-meta.xml
<ListView>
    <fullName>Missing_Mail</fullName>
    <columns>NAME</columns>
    <columns>Delivery_Status__c</columns>
    <columns>Insurance__c</columns>
    <columns>Insured_Value__c</columns>
    <columns>Submit_For_Insurance__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Delivery_Status__c</field>
        <operation>equals</operation>
        <value>Missing</value>
    </filters>
    <label>Missing Mail</label>
</ListView>